# Realtime

./: README.md  main.py  pyproject.toml
src/config/: run.py
src/text/: run.py
src/vad/: run.py
src/voice/: run.py
